Fix line breaks: keep date+arrow together in hotel link, align arrow with '1 maj' in RSVP button

--- a/src/components/RSVP.css
+++ b/src/components/RSVP.css
@@ -76,6 +76,9 @@
 .rsvp-button-arrow {
   font-size: 1.5em;
   transition: transform 0.3s ease;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 0.25em;
 }
 
 .rsvp-button:hover .rsvp-button-arrow {
